Added graph structure:

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,5 @@ bevy = "0.9.1"
 bevy-inspector-egui = "0.17.0"
 bevy_mod_raycast = "0.7.0"
 bevy_rapier3d = "0.20.0"
+itertools = "0.10.5"
+petgraph = "0.6.3"
