--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,9 @@ opt-level = 3
 
 [dependencies]
 bevy = "0.12.0"
-bevy-inspector-egui = "0.21.0"
+bevy-inspector-egui = "0.22.1"
 bevy_mod_raycast = "0.16.0"
-bevy_rapier3d = "0.23.0"
+bevy_panorbit_camera = { version = "0.11.1", features = ["bevy_egui"] }
+bevy_rapier3d = "0.24.0"
 itertools = "0.12.0"
 petgraph = "0.6.4"
