--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,10 +10,11 @@ opt-level = 1
 opt-level = 3
 
 [dependencies]
-bevy = "0.12.0"
+bevy = "0.12.1"
 bevy-inspector-egui = "0.22.1"
 bevy_mod_raycast = "0.16.0"
-bevy_panorbit_camera = { version = "0.11.1", features = ["bevy_egui"] }
+bevy_panorbit_camera = { version = "0.12.0", features = ["bevy_egui"] }
 bevy_rapier3d = "0.24.0"
 itertools = "0.12.0"
 petgraph = "0.6.4"
+bevy_prototype_debug_lines = { git = "https://github.com/Sophya/bevy_debug_lines.git", branch = "fix/upgrade-bevy-0.12", features = ["3d"]}
