--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,15 +4,29 @@ version = "0.1.0"
 edition = "2021"
 
 [profile.dev]
-opt-level = 1
+debug = 0
+strip = "debuginfo"
+opt-level = 0 # Switch to 1 for more runtime performance
 
 [profile.dev.package."*"]
 opt-level = 3
 
+[profile.release]
+opt-level = 3
+panic = 'abort'
+debug = 0
+strip = "debuginfo"
+
+[profile.distribution]
+inherits = "release"
+strip = true
+lto = "thin"
+codegen-units = 1
+
 [dependencies]
-bevy = "0.12.1"
+bevy = { version = "0.12.1", features = ["dynamic_linking"] }
 bevy-inspector-egui = "0.22.1"
-bevy_mod_picking = "0.17.0"
 itertools = "0.12.0"
 petgraph = "0.6.4"
 bevy_prototype_debug_lines = { git = "https://github.com/Sophya/bevy_debug_lines.git", branch = "fix/upgrade-bevy-0.12", features = ["3d"]}
+bevy_rapier3d = { version = "0.24.0", features = ["simd-stable"] }
