--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,15 @@ name = "bevy-road"
 version = "0.1.0"
 edition = "2021"
 
+# Enable a small amount of optimization in debug mode
+[profile.dev]
+opt-level = 1
+
+# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
+[profile.dev.package."*"]
+opt-level = 3
+
+
 [dependencies]
-bevy = { version = "0.13", features = ["file_watcher"] }
-petgraph = "0.6.4"
+bevy = { version = "0.13", features = ["file_watcher", "dynamic_linking"] }
+bevy-inspector-egui = "0.23.3"
