--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,1 +1,54 @@
-{}
+{
+    "wgsl-analyzer.customImports": {
+        "bevy_pbr::fullscreen": "file:///C:/Users/danny/Documents/Projects/Rust/bevy/crates/bevy_core_pipeline/src/fullscreen_vertex_shader/fullscreen.wgsl",
+        "bevy_pbr::tonemapping_shared": "file:///C:/Users/danny/Documents/Projects/Rust/bevy/crates/bevy_core_pipeline/src/tonemapping/tonemapping_shared.wgsl",
+        "bevy_pbr::pbr_deferred_functions": "file:///C:/Users/danny/Documents/Projects/Rust/bevy/crates/bevy_pbr/src/deferred/pbr_deferred_functions.wgsl",
+        "bevy_pbr::pbr_deferred_types": "file:///C:/Users/danny/Documents/Projects/Rust/bevy/crates/bevy_pbr/src/deferred/pbr_deferred_types.wgsl",
+        "bevy_pbr::environment_map": "file:///C:/Users/danny/Documents/Projects/Rust/bevy/crates/bevy_pbr/src/light_probe/environment_map.wgsl",
+        "bevy_pbr::irradiance_volume": "file:///C:/Users/danny/Documents/Projects/Rust/bevy/crates/bevy_pbr/src/light_probe/irradiance_volume.wgsl",
+        "bevy_pbr::light_probe": "file:///C:/Users/danny/Documents/Projects/Rust/bevy/crates/bevy_pbr/src/light_probe/light_probe.wgsl",
+        "bevy_pbr::lightmap": "file:///C:/Users/danny/Documents/Projects/Rust/bevy/crates/bevy_pbr/src/lightmap/lightmap.wgsl",
+        "bevy_pbr::prepass_bindings": "file:///C:/Users/danny/Documents/Projects/Rust/bevy/crates/bevy_pbr/src/prepass/prepass_bindings.wgsl",
+        "bevy_pbr::prepass_io": "file:///C:/Users/danny/Documents/Projects/Rust/bevy/crates/bevy_pbr/src/prepass/prepass_io.wgsl",
+        "bevy_pbr::prepass_utils": "file:///C:/Users/danny/Documents/Projects/Rust/bevy/crates/bevy_pbr/src/prepass/prepass_utils.wgsl",
+        "bevy_pbr::clustered_forward": "file:///C:/Users/danny/Documents/Projects/Rust/bevy/crates/bevy_pbr/src/render/clustered_forward.wgsl",
+        "bevy_pbr::fog": "file:///C:/Users/danny/Documents/Projects/Rust/bevy/crates/bevy_pbr/src/render/fog.wgsl",
+        "bevy_pbr::forward_io": "file:///C:/Users/danny/Documents/Projects/Rust/bevy/crates/bevy_pbr/src/render/forward_io.wgsl",
+        "bevy_pbr::mesh_bindings": "file:///C:/Users/danny/Documents/Projects/Rust/bevy/crates/bevy_pbr/src/render/mesh_bindings.wgsl",
+        "bevy_pbr::mesh_functions": "file:///C:/Users/danny/Documents/Projects/Rust/bevy/crates/bevy_pbr/src/render/mesh_functions.wgsl",
+        "bevy_pbr::mesh_types": "file:///C:/Users/danny/Documents/Projects/Rust/bevy/crates/bevy_pbr/src/render/mesh_types.wgsl",
+        "bevy_pbr::mesh_view_bindings": "file:///C:/Users/danny/Documents/Projects/Rust/bevy/crates/bevy_pbr/src/render/mesh_view_bindings.wgsl",
+        "bevy_pbr::mesh_view_types": "file:///C:/Users/danny/Documents/Projects/Rust/bevy/crates/bevy_pbr/src/render/mesh_view_types.wgsl",
+        "bevy_pbr::morph": "file:///C:/Users/danny/Documents/Projects/Rust/bevy/crates/bevy_pbr/src/render/morph.wgsl",
+        "bevy_pbr::parallax_mapping": "file:///C:/Users/danny/Documents/Projects/Rust/bevy/crates/bevy_pbr/src/render/parallax_mapping.wgsl",
+        "bevy_pbr::pbr_ambient": "file:///C:/Users/danny/Documents/Projects/Rust/bevy/crates/bevy_pbr/src/render/pbr_ambient.wgsl",
+        "bevy_pbr::pbr_bindings": "file:///C:/Users/danny/Documents/Projects/Rust/bevy/crates/bevy_pbr/src/render/pbr_bindings.wgsl",
+        "bevy_pbr::pbr_fragment": "file:///C:/Users/danny/Documents/Projects/Rust/bevy/crates/bevy_pbr/src/render/pbr_fragment.wgsl",
+        "bevy_pbr::pbr_functions": "file:///C:/Users/danny/Documents/Projects/Rust/bevy/crates/bevy_pbr/src/render/pbr_functions.wgsl",
+        "bevy_pbr::pbr_lighting": "file:///C:/Users/danny/Documents/Projects/Rust/bevy/crates/bevy_pbr/src/render/pbr_lighting.wgsl",
+        "bevy_pbr::pbr_prepass_functions": "file:///C:/Users/danny/Documents/Projects/Rust/bevy/crates/bevy_pbr/src/render/pbr_prepass_functions.wgsl",
+        "bevy_pbr::pbr_transmission": "file:///C:/Users/danny/Documents/Projects/Rust/bevy/crates/bevy_pbr/src/render/pbr_transmission.wgsl",
+        "bevy_pbr::pbr_types": "file:///C:/Users/danny/Documents/Projects/Rust/bevy/crates/bevy_pbr/src/render/pbr_types.wgsl",
+        "bevy_pbr::rgb9e5": "file:///C:/Users/danny/Documents/Projects/Rust/bevy/crates/bevy_pbr/src/render/rgb9e5.wgsl",
+        "bevy_pbr::shadow_sampling": "file:///C:/Users/danny/Documents/Projects/Rust/bevy/crates/bevy_pbr/src/render/shadow_sampling.wgsl",
+        "bevy_pbr::shadows": "file:///C:/Users/danny/Documents/Projects/Rust/bevy/crates/bevy_pbr/src/render/shadows.wgsl",
+        "bevy_pbr::skinning": "file:///C:/Users/danny/Documents/Projects/Rust/bevy/crates/bevy_pbr/src/render/skinning.wgsl",
+        "bevy_pbr::utils": "file:///C:/Users/danny/Documents/Projects/Rust/bevy/crates/bevy_pbr/src/render/utils.wgsl",
+        "bevy_pbr::view_transformations": "file:///C:/Users/danny/Documents/Projects/Rust/bevy/crates/bevy_pbr/src/render/view_transformations.wgsl",
+        "bevy_pbr::gtao_utils": "file:///C:/Users/danny/Documents/Projects/Rust/bevy/crates/bevy_pbr/src/ssao/gtao_utils.wgsl",
+        "bevy_pbr::globals": "file:///C:/Users/danny/Documents/Projects/Rust/bevy/crates/bevy_render/src/globals.wgsl",
+        "bevy_pbr::maths": "file:///C:/Users/danny/Documents/Projects/Rust/bevy/crates/bevy_render/src/maths.wgsl",
+        "bevy_pbr::view": "file:///C:/Users/danny/Documents/Projects/Rust/bevy/crates/bevy_render/src/view/view.wgsl",
+        "bevy_pbr::mesh2d_bindings": "file:///C:/Users/danny/Documents/Projects/Rust/bevy/crates/bevy_sprite/src/mesh2d/mesh2d_bindings.wgsl",
+        "bevy_pbr::mesh2d_functions": "file:///C:/Users/danny/Documents/Projects/Rust/bevy/crates/bevy_sprite/src/mesh2d/mesh2d_functions.wgsl",
+        "bevy_pbr::mesh2d_types": "file:///C:/Users/danny/Documents/Projects/Rust/bevy/crates/bevy_sprite/src/mesh2d/mesh2d_types.wgsl",
+        "bevy_pbr::mesh2d_vertex_output": "file:///C:/Users/danny/Documents/Projects/Rust/bevy/crates/bevy_sprite/src/mesh2d/mesh2d_vertex_output.wgsl",
+        "bevy_pbr::mesh2d_view_bindings": "file:///C:/Users/danny/Documents/Projects/Rust/bevy/crates/bevy_sprite/src/mesh2d/mesh2d_view_bindings.wgsl",
+        "bevy_pbr::mesh2d_view_types": "file:///C:/Users/danny/Documents/Projects/Rust/bevy/crates/bevy_sprite/src/mesh2d/mesh2d_view_types.wgsl",
+        "bevy_pbr::ui_vertex_output": "file:///C:/Users/danny/Documents/Projects/Rust/bevy/crates/bevy_ui/src/render/ui_vertex_output.wgsl"
+    },
+    "wgsl-analyzer.diagnostics.nagaVersion": "main",
+    "wgsl-analyzer.diagnostics.nagaValidationErrors": true,
+    "wgsl-analyzer.inlayHints.structLayoutHints": true,
+    "wgsl-analyzer.diagnostics.nagaParsingErrors": true,
+}
