--- a/opendrive/Cargo.toml
+++ b/opendrive/Cargo.toml
@@ -8,5 +8,4 @@ edition = "2021"
 [dependencies]
 quick-xml = { version = "0.31.0", features = ["serialize"] }
 serde = { version = "1.0.197", features = ["derive"] }
-uom = { version = "0.36.0", features = ["serde"] }
-vec1 = { version = "1.11.1", features = ["serde"] }
+bevy = { version = "0.13" }
