--- a/viewer/Cargo.toml
+++ b/viewer/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "visualization"
+name = "viewer"
 version = "0.1.0"
 edition = "2021"
 
@@ -8,3 +8,5 @@ edition = "2021"
 [dependencies]
 bevy = { version = "0.13", features = ["file_watcher"] }
 bevy-inspector-egui = "0.23"
+
+opendrive = { path = "../opendrive" }
