--- a/bevy_road-core/Cargo.toml
+++ b/bevy_road-core/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "opendrive"
+name = "bevy_road-core"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-quick-xml = { version = "0.31.0", features = ["serialize"] }
-serde = { version = "1.0.197", features = ["derive"] }
+opendrive = { path = "../opendrive" }
+ordered-float = { version = "4.2.0" }
