--- a/viewer/Cargo.toml
+++ b/viewer/Cargo.toml
@@ -8,5 +8,6 @@ edition = "2021"
 [dependencies]
 bevy = { version = "0.13", features = ["file_watcher"] }
 bevy-inspector-egui = "0.23"
+ordered-float = { version = "4.2.0" }
 
 bevy_road-core = { path = "../bevy_road-core" }
