--- a/viewer/Cargo.toml
+++ b/viewer/Cargo.toml
@@ -11,5 +11,7 @@ bevy-inspector-egui = "0.23"
 ordered-float = { version = "4.2.0" }
 
 bevy_road-core = { path = "../bevy_road-core" }
+building = { path = "../building" }
 rfd = "0.14.1"
 futures-lite = "2.3.0"
+smooth-bevy-cameras = "0.11.0"
