Switch to pan orbit camera and non-constant curvatures

--- a/viewer/Cargo.toml
+++ b/viewer/Cargo.toml
@@ -14,4 +14,4 @@ bevy_road-core = { path = "../bevy_road-core" }
 building = { path = "../building" }
 rfd = "0.14.1"
 futures-lite = "2.3.0"
-smooth-bevy-cameras = "0.11.0"
+bevy_panorbit_camera = { version = "0.17.0", features = ["bevy_egui"] }
